# OpenVINO-tutorial

./: .gitmodules  README.md
monomonotech/: .gitignore  .mise.toml  README.md  pyproject.toml
monomonotech/src/: cv_img.py  cv_numpy.py  cv_video.py  emotion1.py  face_detection.py  face_detection_and_emotion.py  np_dim.py  pngoverlay.py  video_face_detection.py  video_face_detection_and_emotion.py
